create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/x">free css templates</a></section><section class="carousel slide cid-r34IoHR0oW" data-interval="false" id="slider1-0">
+<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="carousel slide cid-r34IoHR0oW" data-interval="false" id="slider1-0">
 
     
 
